<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BookStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account ? Sign In</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_to_bookstore">Welcome to BookStore</string>
    <string name="wish_list">wishList</string>
    <string name="cart">cart</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="sign_out">Sign out</string>
    <string name="rupee_symbol">₹.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="strike_through_text"><strike>%s</strike></string>
    <string name="change_theme">Change Theme</string>
    <string name="paymentactivity">PaymentActivity</string>
    <string name="your_free_trial_has_expired">Your free trial has expired!!</string>
    <string name="payment_message">Thank you for signing up for BookStore!.We hope you have enjoyed
        free trial.To continue enjoying you need to upgrade your account. </string>
    <string name="card_number">Card Number</string>

</resources>